nginx-demo/nginx-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: echoserverdemo
          image: k8s.gcr.io/echoserver:1.4
          ports:
          - containerPort: 8080
